# pineapple-music

./: .gitignore  CMakeLists.txt  FlacPic.h  ID3v2Pic.h  README.md  appveyor.yml  fftspectrum.cpp  fftspectrum.h  lrcbar.cpp  lrcbar.h  lyricsmanager.cpp  lyricsmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pineapple-music.desktop  playbackprogressindicator.cpp  playbackprogressindicator.h  playlistmodel.cpp  playlistmodel.h  resources.qrc  seekableslider.cpp  seekableslider.h  singleapplicationmanager.cpp  singleapplicationmanager.h  taskbarmanager.cpp  taskbarmanager.h  taskbarmanager_dummy.cpp
.github/workflows/: windows.yml
assets/: pineapple-music.rc
assets/icons/: app-icon.icns
languages/: pineapple-music.ts  pineapple-music_de.ts  pineapple-music_en.ts  pineapple-music_nl.ts  pineapple-music_pl.ts  pineapple-music_tr.ts  pineapple-music_zh_CN.ts
